@@ -3,7 +3,7 @@ use strict;
 use warnings;
 use Data::Currency;
 use Test::Exception;
-use Test::More tests => 9;
+use Test::More tests => 11;
 
 {
     my $value1 = Data::Currency->new( 1.2, 'USD' );
@@ -41,4 +41,13 @@ use Test::More tests => 9;
     my $value1 = Data::Currency->new( 1.2, 'USD' );
     my $value2 = Data::Currency->new( 1.2, 'EUR' );
     dies_ok sub { $value1 - $value2 }, 'Different symbols';
+}
+
+{
+    local $SIG{__WARN__} = sub { die "Warnings" };
+    my $value1 = undef;
+    my $value2 = Data::Currency->new( 1.2, 'USD' );
+    my $result = $value1 - $value2;
+    is $result->code,     'USD',  'symbol';
+    is $result->as_float, '-1.20', 'value';
 }
