@@ -1,7 +1,8 @@
 Revision history for Data::Currency
 
 0.06000 Sun Jul 14 15:00:00 2013
-    - 
+    - Three way comparison string
+    - Treat undef as 0 on arithmetic
 
 0.05001 Sun Jul 14 15:00:00 2013
     - Corrected POD
